force-app/main/default/objects/Deleted_record_log__c/Deleted_record_log__c.object-meta.xml
<CustomObject>
    <label>Deleted record log</label>
    <nameField>
        <displayFormat>DEL-{0}</displayFormat>
        <label>Deleted record log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted record logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>