force-app/main/default/objects/Deleted_record_log__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>