force-app/main/default/objects/Deleted_record_log__c/fields/DreamId__c.field-meta.xml
<CustomField>
    <fullName>DreamId__c</fullName>
    <label>DreamId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>