force-app/main/default/objects/Deleted_record_log__c/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <label>Object_name</label>
    <length>140</length>
    <type>Text</type>
</CustomField>