force-app/main/default/objects/Deleted_record_log__c/fields/Object_type__c.field-meta.xml
<CustomField>
    <fullName>Object_type__c</fullName>
    <label>Object type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>